--- a/package.json
+++ b/package.json
@@ -6,10 +6,30 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "@material-ui/core": "^4.9.9",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.48",
+    "bootstrap": "^4.2.1",
+    "firebase": "^7.13.2",
+    "material-ui": "^0.20.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-firebase-file-uploader": "^2.4.3",
+    "react-flow-player": "^1.2.1",
+    "react-flv-player": "^1.0.9",
+    "react-google-charts": "^3.0.15",
+    "react-material-ui-carousel": "^1.1.1",
+    "react-native-nodemediaclient": "^0.1.6",
+    "react-player": "^1.15.3",
+    "react-redux": "^7.2.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.1.3",
+    "video-react": "^0.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
