--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.2.1",
     "date-fns": "^2.23.0",
     "firebase": "^7.13.2",
+    "jquery": "^3.6.0",
     "material-ui": "^0.20.2",
     "moment": "^2.29.1",
     "react": "^16.13.1",
