--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "react-google-charts": "^3.0.15",
     "react-material-ui-carousel": "^1.1.1",
     "react-native-nodemediaclient": "^0.1.6",
+    "react-number-format": "^4.7.3",
     "react-player": "^1.15.3",
     "react-redux": "^7.2.0",
     "react-router": "^4.3.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "2.1.3",
     "react-select-country-list": "^2.2.3",
+    "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.3",
