--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.6.0",
     "material-ui": "^0.20.2",
     "moment": "^2.29.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-firebase-file-uploader": "^2.4.3",
