--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "date-fns": "^2.23.0",
     "firebase": "^7.13.2",
     "geofire-common": "^5.2.0",
-    "google-map-react": "^2.1.10",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "material-ui": "^0.20.2",
@@ -28,6 +27,7 @@
     "react-flow-player": "^1.2.1",
     "react-flv-player": "^1.0.9",
     "react-google-charts": "^3.0.15",
+    "react-google-maps": "^9.4.5",
     "react-map-gl": "^6.1.17",
     "react-material-ui-carousel": "^1.1.1",
     "react-native-nodemediaclient": "^0.1.6",
