--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.23.0",
     "firebase": "^7.13.2",
     "geofire-common": "^5.2.0",
+    "google-maps-react": "^2.0.6",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "material-ui": "^0.20.2",
