--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.2.1",
+    "caniuse-lite": "^1.0.30001312",
     "date-fns": "^2.23.0",
     "firebase": "^7.13.2",
     "geofire-common": "^5.2.0",
@@ -24,6 +25,7 @@
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-file-drop": "^3.1.3",
     "react-firebase-file-uploader": "^2.4.3",
     "react-flow-player": "^1.2.1",
     "react-flv-player": "^1.0.9",
