--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "yarn": "^1.22.11"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
