--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-redux": "^7.2.0",
     "react-router": "^4.3.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^5.0.1",
     "react-select-country-list": "^2.2.3",
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
@@ -48,7 +48,7 @@
     "yarn": "^1.22.11"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
