--- a/package.json
+++ b/package.json
@@ -8,18 +8,25 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.48",
     "@material-ui/pickers": "^3.3.10",
+    "@react-pdf-viewer/core": "^3.11.0",
+    "@react-pdf-viewer/zoom": "^3.11.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "base64-to-uint8array": "^1.0.0",
     "bootstrap": "^4.2.1",
     "date-fns": "^2.23.0",
     "firebase": "^7.13.2",
     "geofire-common": "^5.2.0",
     "google-maps-react": "^2.0.6",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.6.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "leaflet": "^1.7.1",
     "material-ui": "^0.20.2",
     "moment": "^2.29.1",
+    "pdfjs-dist": "^3.4.120",
     "pigeon-maps": "^0.19.7",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
@@ -33,6 +40,7 @@
     "react-material-ui-carousel": "^1.1.1",
     "react-native-nodemediaclient": "^0.1.6",
     "react-number-format": "^4.7.3",
+    "react-pdf": "^6.2.2",
     "react-player": "^1.15.3",
     "react-redux": "^7.2.0",
     "react-router": "^4.3.1",
