Migration Initialised and Invoices 90% Complete

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.48",
     "@material-ui/pickers": "^3.3.10",
+    "@mui/icons-material": "^5.11.16",
     "@react-pdf-viewer/core": "^3.11.0",
     "@react-pdf-viewer/zoom": "^3.11.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -24,8 +25,10 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
     "leaflet": "^1.7.1",
+    "mammoth": "^1.5.1",
     "material-ui": "^0.20.2",
     "moment": "^2.29.1",
+    "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^3.4.120",
     "pigeon-maps": "^0.19.7",
     "popper.js": "^1.16.1",
@@ -36,6 +39,7 @@
     "react-flv-player": "^1.0.9",
     "react-google-charts": "^3.0.15",
     "react-google-maps": "^9.4.5",
+    "react-input-mask": "^2.0.4",
     "react-map-gl": "^6.1.17",
     "react-material-ui-carousel": "^1.1.1",
     "react-native-nodemediaclient": "^0.1.6",
